fix(header): change padding-top to fill gap

--- a/default.css
+++ b/default.css
@@ -2727,5 +2727,5 @@ div:not(.paperList) .listItem {
   margin-right: 1vw;
 }
 .pageWithAbsoluteTabs:not(.noSecondaryNavPage) {
-  padding-top: 4.6em !important;
+  padding-top: 4.4em !important;
 }
